<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="60sp"
        android:layout_marginHorizontal="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>