<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="350sp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
            <!--
            <ImageView
                android:id="@+id/sort"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/sort" />
            -->

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/main"
        layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56sp"
        android:layout_height="56sp"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>